<resources>
    <string name="app_name">麦德龙商城</string>

    <string name="limited_time_offers">限时优惠</string>
    <string name="replace">更换</string>
    <string name="headlines">麦头条：</string>
    <string name="back">返回</string>
    <string name="logout">注销</string>
    <string name="notice_list">公告列表</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="mer_classify">商品分类</string>
    <string name="shop_car">购物车</string>
    <string name="my">我的</string>
    <string name="worth">“麦”享品质</string>
    <string name="scanning">扫一扫</string>
    <string name="check_mall">请选择配送商场</string>
    <string name="retrieve_password">找回密码</string>
    <string name="no_login">一个月内免登陆</string>
    <string name="reg">免费注册</string>
    <string name="login">登录</string>
    <string name="vip_login">会员登录</string>
    <string name="login_hint_account">请输入用户名/邮箱/手机号/会员卡号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="confirm_password">请输入确认密码</string>
    <string name="re_hint_account">请输入用户名或邮箱</string>
    <string name="re_auth_code">请输入图形验证码</string>
    <string name="next">下一步</string>
    <string name="check_mode">选择找回密码方式：</string>
    <string name="get_sms">获取短信验证码</string>
    <string name="re_sms_code">请输入短信验证码</string>
    <string name="password_lvl">密码等级：</string>
    <string name="retrieve_password_success">找回密码成功</string>
    <string name="update_password_success">新密码设置成功！</string>
    <string name="back_login">返回登录页面</string>
    <string name="register">注册</string>
    <string name="y_reg">有卡注册</string>
    <string name="n_reg">无卡注册</string>
    <string name="y_vip_reg">有卡会员注册</string>
    <string name="n_vip_reg">无卡会员注册</string>
    <string name="reg_hint_phone">请输入正确的手机号码</string>
    <string name="update_phone_phone">请输入新手机号码</string>
    <string name="reg_hint_password">请输入登录密码（6位以上）</string>
    <string name="vip_id_code">请输入麦德龙会员卡号</string>
    <string name="vip_phone">卡号绑定的手机号码</string>
    <string name="perfect_information">完善个人资料</string>
    <string name="go_mall">先逛商城</string>
    <string name="reg_success">恭喜注册成功！</string>
    <string name="phone_reg">手机快速注册</string>
    <string name="vip_center">会员中心</string>
    <string name="wait_payment">待付款</string>
    <string name="wait_delivery">待发货</string>
    <string name="my_orders">我的订单</string>
    <string name="coupons">优惠券</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_footprint">我的足迹</string>
    <string name="service_center">客服中心</string>
    <string name="feedback">服务反馈</string>
    <string name="policy">政策条款</string>
    <string name="vip_recommend">为你推荐</string>
    <string name="back_content">反馈内容：</string>
    <string name="please_edit">请输入内容...</string>
    <string name="commit">提交</string>
    <string name="thank">谢谢您的宝贵意见！我们将不断改善，为您提供优质的产品和服务！</string>
    <string name="call">如紧急事项请直接拨打客服电话</string>
    <string name="tel">4001-518-518</string>
    <string name="null_shop_car">您的购物车还是空的，去选点什么吧！</string>
    <string name="stroll">随便逛逛</string>
    <string name="all_check">全选</string>
    <string name="total">合计：</string>
    <string name="clearing">结算(0)</string>
    <string name="weight">已优惠¥0  重量0kg</string>
    <string name="can_use">可使用(0)</string>
    <string name="used">已使用(0)</string>
    <string name="null_sale">暂时还没有相关信息哦！</string>
    <string name="go_stroll">去逛逛</string>
    <string name="delete">删除</string>
    <string name="editor">编辑</string>
    <string name="faq">常见问题</string>
    <string name="change_gods_policy">退换货政策</string>
    <string name="payment_method">支付方式</string>
    <string name="dispatching">配送说明</string>
    <string name="deal">交易协议</string>
    <string name="vip_info">会员资料</string>
    <string name="my_info">个人资料</string>
    <string name="address">地址管理</string>
    <string name="update_phone">修改手机</string>
    <string name="update_password">修改密码</string>
    <string name="vip_code">会员编号：</string>
    <string name="user_name">用户名：</string>
    <string name="email">邮箱：</string>
    <string name="reg_date">注册日期：</string>
    <string name="telephone">手机号码：</string>
    <string name="sex">性别：</string>

    <string name="save_info">保存信息</string>
    <string name="delivery_address">配送地址</string>
    <string name="add_new_address">添加新地址</string>
    <string name="consignee">收 货 人：</string>
    <string name="consignee_name">收货人姓名</string>
    <string name="hint_telephone">手机号码</string>
    <string name="area">所在地区：</string>
    <string name="detail_address">详细地址：</string>
    <string name="hint_detail_address">详细地址</string>
    <string name="default_address">设为默认收货地址</string>
    <string name="save">保存</string>
    <string name="update_telephone">修改手机号码</string>
    <string name="complete">完成</string>
    <string name="all_order">全部</string>
    <string name="payment_pending">待付款</string>
    <string name="awaiting_delivery">待发货</string>
    <string name="complete_order">已完成</string>
    <string name="recent_search">最近搜索</string>
    <string name="empty_search_history">清空搜索历史</string>
    <string name="top_search">热门搜索</string>
    <string name="in_batch">换一批</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_introduce">商品介绍</string>
    <string name="goods_specs">规格参数</string>
    <string name="pc_detail">PC图文详情</string>
    <string name="collect">收藏</string>
    <string name="add_shop_cart">加入购物车</string>
    <string name="save_image">保存图片</string>
    <string name="skip">跳过(5)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
