<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metro.metromall.fragments.vip_center.FeedBackFragment"
    android:background="@color/bak"
    android:orientation="vertical"
    android:clickable="true">

    <include layout="@layout/fragment_title_gp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fourteen"
        android:text="@string/back_content"
        android:textColor="@color/home_notice"
        android:layout_marginLeft="@dimen/Ten"
        android:layout_marginTop="@dimen/Twenty"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/OneHundredFifty"
        android:layout_margin="@dimen/Ten">
        <EditText
            android:id="@+id/back_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/reg_edit"
            android:minLines="5"
            android:maxLines="20"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:hint="@string/please_edit"
            android:textColorHint="@color/dot_gray"
            android:textSize="@dimen/fourteen"
            android:textColor="@color/home_notice"
            android:padding="@dimen/Five"
            android:maxLength="400"/>
        <TextView
            android:id="@+id/editor_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/400"
            android:textSize="@dimen/fourteen"
            android:textColor="@color/vip_recommend"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/Five"
            android:layout_marginBottom="@dimen/Five"/>
    </RelativeLayout>

    <Button
        android:id="@+id/back_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Forty"
        android:background="@drawable/next"
        android:layout_marginLeft="@dimen/Ten"
        android:layout_marginRight="@dimen/Ten"
        android:layout_marginTop="@dimen/Forty"
        android:textSize="@dimen/sixteen"
        android:textColor="@color/white"
        android:text="@string/commit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank"
        android:textSize="@dimen/fourteen"
        android:textColor="@color/vip_recommend"
        android:layout_marginLeft="@dimen/Ten"
        android:layout_marginRight="@dimen/Ten"
        android:layout_marginTop="@dimen/Twenty"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textSize="@dimen/fourteen"
        android:textColor="@color/vip_recommend"
        android:layout_marginTop="@dimen/Five"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        android:textSize="@dimen/fourteen"
        android:textColor="@color/tel"
        android:layout_marginTop="@dimen/Five"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
