<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metro.metromall.fragments.login.LoginFragment"
    android:background="@color/bak"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:clickable="true">

    <include layout="@layout/fragment_title_gp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_big"
        android:layout_marginTop="@dimen/Twenty"/>
    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:layout_margin="@dimen/Twenty"
        android:background="@drawable/login_edit"
        android:padding="@dimen/Ten"
        android:drawablePadding="@dimen/Ten"
        android:singleLine="true"
        android:textColor="@color/login_edit"
        android:textSize="@dimen/fourteen"
        android:drawableLeft="@mipmap/account"
        android:hint="@string/login_hint_account"
        android:textColorHint="@color/gray"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:layout_margin="@dimen/Twenty"
        android:background="@drawable/login_edit"
        android:padding="@dimen/Ten"
        android:drawablePadding="@dimen/Ten"
        android:singleLine="true"
        android:textColor="@color/login_edit"
        android:textSize="@dimen/fourteen"
        android:drawableLeft="@mipmap/password"
        android:inputType="textPassword"
        android:hint="@string/login_hint_password"
        android:textColorHint="@color/gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Thirty">
        <TextView
            android:id="@+id/retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_text"
            android:textSize="@dimen/fourteen"
            android:text="@string/retrieve_password"
            android:layout_marginLeft="@dimen/Twenty"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:id="@+id/cb_no_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/no_login"
            android:layout_centerVertical="true"
            android:background="@drawable/no_login_rbtn"
            android:button="@null"
            android:checked="true"/>
        <TextView
            android:id="@+id/no_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_text"
            android:textSize="@dimen/fourteen"
            android:text="@string/no_login"
            android:layout_marginRight="@dimen/Twenty"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:background="@drawable/login_button"
        android:layout_margin="@dimen/Twenty"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen"/>
    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/fourteen"
        android:text="@string/reg"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/Twenty"/>

</LinearLayout>
