<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metro.metromall.fragments.vip_center.PerfectInfoFragment"
    android:background="@color/bak"
    android:orientation="vertical"
    android:clickable="true">

    <include layout="@layout/fragment_title_gp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/my_info_title"
            android:text="@string/vip_code"
            />
        <TextView
            android:id="@+id/vip_code"
            style="@style/my_info_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/big_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/my_info_title"
            android:text="@string/user_name"
            />
        <TextView
            android:id="@+id/user_name"
            style="@style/my_info_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/big_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/my_info_title"
            android:text="@string/email"
            />
        <TextView
            android:id="@+id/email"
            style="@style/my_info_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/big_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/my_info_title"
            android:text="@string/reg_date"
            />
        <TextView
            android:id="@+id/reg_date"
            style="@style/my_info_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/big_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/my_info_title"
            android:text="@string/telephone"
            />
        <TextView
            android:id="@+id/telephone"
            style="@style/my_info_content" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/big_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/my_info_title"
            android:text="@string/sex" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/Five">
            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Five"
                android:drawableLeft="@drawable/radio_sex"
                android:text="男"
                android:textColor="@color/big_title"
                android:gravity="center"
                android:layout_gravity="center"
                android:button="@null"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/radio_sex"
                android:text="女"
                android:textColor="@color/big_title"
                android:layout_marginLeft="@dimen/Twenty"
                android:paddingLeft="0dp"
                android:button="@null"/>
        </RadioGroup>

    </LinearLayout>
    <Button
        android:id="@+id/save_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:background="@drawable/next"
        android:layout_margin="@dimen/Twenty"
        android:text="@string/save_info"
        android:textSize="@dimen/twenty"/>
</LinearLayout>
